# Borg-DQN

./: README.md  compose.yaml  rebuild.sh
.github/workflows/: pytest.yml
env_agent/: Dockerfile
env_agent/src/: __main__.py  loop.py
env_agent/src/agent/: double_dqn_agent.py  epsilon_decay.py
env_agent/src/config/: __init__.py  config.py
env_agent/src/environment/: _base_env.py
env_agent/src/memory/: __init__.py  memory_connector.py
env_agent/src/memory/threads/: redis_consumer.py  redis_producer.py
env_agent/src/reporter/: kafka_reporter.py  report.py
env_agent/src/transition/: serialize.py
env_agent/src/transition/proto/: transition_pb2.py
env_agent/test/agent/: test_epsilon_decay.py
env_agent/test/config/: test_create_config.py
env_agent/test/memory/: test_memory_connector.py
env_agent/test/memory/threads/: test_redis_producer.py
env_agent/test/reporter/: test_kafka_reporter.py  test_report.py  utils.py
env_agent/test/transition/: utils.py
game/: pyproject.toml
game/src/: __main__.py  loop.py
game/src/agent/: __init__.py
game/src/config/: create_config.py  log_level.py
game/src/environment/: __init__.py
game/src/memory/threads/: _redis_thread.py  redis_consumer.py
game/src/reporter/: __init__.py  kafka_reporter.py  report.py
game/src/transition/: __init__.py
game/src/transition/proto/: compile.sh  transition.proto
game/test/memory/threads/: test_redis_consumer.py
game/test/reporter/: test_kafka_reporter.py  test_report.py  utils.py
game/test/transition/: test_serialize.py
kibana/: export.ndjson  kibana_startup.sh
logstash/config/: pipelines.yml
logstash/config-tmpl/: logstash.conf
mem_monitor/: Dockerfile
mem_monitor/src/: __main__.py
monitor/: Dockerfile  pyproject.toml
monitor/src/: __main__.py  monitor.py
monitor/test/: test_monitor.py
